<resources>
    <string name="app_name">Coronaemergency</string>
    <string name="pro_tag1"><b>১)সাবান বা হ্যান্ড স্যানিটাইজার দিয়ে হাত ধুতে হবে বারবার (বিশেষ করে হাঁচিকাশির পর এবং পাব্লিক প্লেস থেকে ঘরে ফেরার পর)।</b>\n<b>বিশ্লেষণঃ</b> সাধারণ সাবানই সবচেয়ে দারুণ কার্যকর- সাবানের অণুগুলো ভাইরাসের শরীরের চর্বির দেয়াল ভঙ্গে ফেলে ভাইরাসকে ছিন্ন-বিচ্ছিন্ন করে দিতে পারে। সাবান না থাকলে হ্যান্ড- স্যানিটাইজার ব্যবহার করা যেতে পারে যেখান অ্যালকোহলের পরিমাণ ৬০% এর বেশি। হাত পানিতে ভিজিয়ে এরপর সাবান দিয়ে ২০ সেকেন্ড ধুতে হবে (দুইবার হ্যাপি বার্থডে টু ইউ গান গাইলে প্রায় ২০ সেকেন্ডের একটু বেশি হয়)। \n<b>-->নখের নিচে আঙুলের ভাঁজে, হাতের উল্টো পৃষ্ঠে ভালো করে ধুতে হবে।</b>\nহাঁচি-কাশি এলে হাতের তালু দিয়ে না ঢেকে কনুই দিয়ে ঢাকতে হবে। অথবা হাঁচি-কাশি টিস্যু পেপার দিয়ে ঢাকতে হবে, এরপর সাথে সাথে টিস্যু পেপারটা ময়লা ফেলার জায়গায় ফেলে হাত সাবান দিয়ে ধুয়ে ফেলতে হবে।\n<b>২)নাকে মুখে চোখে হাত দেওয়া থেকে থেকে বিরত থাকতে হবে।</b></string>
    <string name="pro_tag2">১)যেখানে সেখানে কফ থুথু ফেলা থেকে নিজেকে বিরত রাখতে হবে।\n২)হাত দিয়ে নাক,মুখ ও চোখ স্পর্শ করা থেকে বিরত থাকুন।\nস্পর্শ করার পূর্বে হাত ভালোভাবে ধুয়ে নিন। করমর্দন বা কোলাকুলির মত সামাজিক কার্যকলাপ থেকে নিজেকে বিরত রাখুন।</string>
    <string name="pro_tag3">হাচি-কাশির সময়ে টিস্যু অথবা পরিষ্কার রুমাল কিংবা কোনো কাপড় অথবা নিজের হাতের বাহুর ভাজে নাক মুখ ঢাকে ফেলুন,যাতে করে করোনা ছড়াতে না পারে । ব্যাবহারিত টিস্যু ময়লার পাত্রে ফেলে হাত ভালোকরে ধুয়ে ফেলুন।</string>
    <string name="pro_tag4">১)হাঁচি- কাশি হচ্ছে এমন কারও সর্বনিন্ম ৩ ফুট প্রয়োজনে ৬ ফুটের ভেতর আসবেন না। <b>হ্যান্ডশেক বাদ দিন।</b>\n২)অপ্রয়োজনে  বা স্বল্প প্রয়োজনে ভ্রমণ থেকে বিরত থাকুন।জনসমাবেশে যাওয়ার দরকার নেই।\n যদি আপনি নিজে হাঁচি-কাশিতে আক্রান্ত হন, নিজেকে বাসায় আটকে ফেলুন, কোথাও বের হবেন না। \n<b>৩)বাসা থেকেই হটলাইনে ফোন দিন।</b></string>
    <string name="symtom_tag1">জ্বর,কাশি,শ্বাস প্রশ্বাসের সমস্যাই মূলত প্রধান লক্ষণ। এছাড়াও রয়েছে \nক) সর্দি\nখ) গলা ব্যথা\nগ) মাথা ব্যাথা\nঘ) হাঁচি\nঙ) অবসাদ।</string>
    <string name="symtomday1to3">Day 1 - Day 3:\nসাধারণ সর্দিকাশি, হাল্কা গলা ব্যথা, তেমন কোনো জ্বর নাই।\nআপেক্ষিক ভাবে সুস্থ এবং খাওয়া দাওয়া করতে সমস্যা হবে না।</string>
    <string name="symtomday4">Day 4:\n-গলা ব্যথা প্রথম ৩ দিনের তুলনায় কিছুটা বেশী। মাথা ঘোরা ও কিছুটা ভারসাম্যহীন অনুভব করা।\n-কথা বলতে কষ্ট হওয়া,শরীরের তাপমাত্রা ৯৮.৪° এর আশেপাশে।\n-খাওয়া দাওয়া করতে সমস্যা হওয়া।\n-হাল্কা মাথা ব্যথা,অনেক সময় ডায়রিয়ার মতো হওয়া।</string>
    <string name="symtomday5">Day-5:\n-গলা ব্যথা পূর্বের চেয়ে বেশী ।কথা বললে গলায় বেশি ব্যথা করা।\nদেহের তাপমাত্রা ৯৮.১°- ৯৮.৪° এর কাছাকাছি।শারীরিক দূর্বলাতা ও জয়েন্টে জয়েন্টে ব্যথা।</string>
    <string name="symtomday6">Day 6:\n-জ্বরের তীব্রতা আস্তে আস্তে বেড়ে ৯৮° এর আশেপাশে থাকা। শুকনা কাশি শুরু হওয়া।কথা বলার সময় বা ঢোক গিলতে গেলে ব্যথা করা।\nঅস্বাভাবিক দূর্বলতা,বমি বমি ভাব,মাঝে মাঝে শ্বাসকষ্ট হওয়া। হাতের আঙুল গুলোতে ব্যথা শুরু হওয়া।\nবমি,ডায়রিয়া।</string>
    <string name="symtomday7">Day 7\n-উচ্চমাত্রায় জ্বর (৯৯.৩°- ১০০°)\n-কফ সহ কাশি\n-মাথা ও শরীর ব্যথা,বমি ও ডায়রিয়া বৃদ্দ্বি পাওয়া।</string>
    <string name="symtomday8">Day 8:\n-জ্বরের মাত্রা বৃদ্ধি পেয়ে ১০০.৪°এর উপরে চলে যায়।\n-শ্বাসকষ্ট এবং প্রতিবার শ্বাসপ্রশ্বাস নেয়ার সময় বুক ভার ভার লাগে।\n-বিরতিহীন কাশি।\nমাথা ব্যথা,জয়েন্ট ব্যথা এবং কোমরের মাংস ব্যথা।</string>
    <string name="symtomday9">Day 9:\nআগের সকল সিম্পটম থাকবে তবে সেগুলো মারাত্মক আকার ধারন করা যেমন জ্বরের অবস্থা আরো অবনতি , শ্বাসপ্রশ্বাস বন্ধ হয়ে যাওয়ার অবস্থা</string>
    <string name="symtomdayheading">(কিভাবে বুঝবেন আপনি করোনা ভাইরাস (Covid-19) দিয়ে আক্রান্ত?\nতথ্যসূত্রঃ Singapore Ministry of Health.

দিন অনুযায়ী লক্ষ্মণ সমূহঃ</string>
    <string name="symtomday3">Coronaemergency</string>
    <string-array name="Div">
        <item>Select</item>
        <item>ঢাকা</item>
        <item>বরিশাল</item>
        <item>খুলনা</item>
        <item>চট্টগ্রাম</item>
        <item>রাজশাহী</item>
        <item>সিলেট</item>
        <item>ময়মনসিংহ</item>
        <item>রংপুর</item>

    </string-array>
    <string-array name="District">
        <item>Select</item>
        <item>ঢাকা</item>
        <item>মাদারীপুর</item>
        <item>বাগেরহাট</item>
        <item>বরগুনা</item>
        <item>বরিশাল</item>
        <item>ভোলা</item>
        <item>বগুড়া</item>
        <item>ব্রাহ্মনবাড়িয়া</item>
        <item>চাদপুর</item>
        <item>চট্টগ্রাম</item>
        <item>চুয়াডাঙ্গা</item>
        <item>কুমিল্লা</item>
        <item>কক্সবাজার</item>
        <item>দিনাজপুর</item>
        <item>ফরিদপুর</item>
        <item>ফেনী</item>
        <item>গাইবান্ধা</item>
        <item>গাজীপুর</item>
        <item>গোপালগঞ্জ</item>
        <item>হবিগঞ্জ</item>
        <item>জামাল্পুর</item>
        <item>যশোর</item>
        <item>ঝালোকাঠি</item>
        <item>ঝীনাইদাহ</item>
        <item>জয়পুরহাট</item>
        <item>খাগড়াছড়ি</item>
        <item>খুলনা</item>
        <item>কিশোরগঞ্জ</item>
        <item>কুড়িগ্রাম</item>
        <item>কুষ্টিয়া</item>
        <item>লালমনিরহাট</item>
        <item>লক্ষ্মীপুর</item>
        <item>মাগুড়া</item>
        <item>মানিকগঞ্জ</item>
        <item>মেহেরপুর</item>
        <item>মৌলভীবাজার</item>
        <item> মুন্সিগঞ্জ</item>
        <item>ময়মনসিংহ</item>
        <item>নওগাঁ</item>
        <item>নড়াইল</item>
        <item>নারায়ণগঞ্জ</item>
        <item>নরসিংদী</item>
        <item>নাটোর</item>
        <item>নেত্রকোনা</item>
        <item>নীলফামারী</item>
        <item>নোয়াখালী</item>
        <item>পাবনা</item>
        <item>পঞ্চগড়</item>
        <item>পটুয়াখালি</item>
        <item>পিরোজপুর</item>
        <item>রাজবাড়ি</item>
        <item>রাজশাহী</item>
        <item>রাঙামাটি</item>
        <item>রংপুর</item>
        <item>সাতক্ষীরা</item>
        <item>শরিয়তপুর</item>
        <item>শেরপুর</item>
        <item>সিরাজগঞ্জ</item>
        <item>সুনামগঞ্জ</item>
        <item>সিলেট</item>
        <item>টাঙ্গাইল</item>
        <item>ঠাকুরগাঁও</item>
    </string-array>
</resources>