<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".tips.SymptomActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:background="@drawable/pro6">

    </ImageView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_3sdp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginRight="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_5sdp">

                <LinearLayout
                    android:background="@drawable/shape_border_round_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_120sdp"
                        android:background="@drawable/pro4">
                    </ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_4sdp"
                        android:text="@string/symtom_tag1"
                        android:textColor="#170241"
                        android:textSize="14sp">

                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"></LinearLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout
                    android:background="@drawable/shape_border_round_grn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_2sdp"
                        android:text="@string/symtomdayheading"
                        android:textColor="#170241"
                        android:textSize="14sp"
                        >

                    </TextView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView

                            app:cardCornerRadius="@dimen/_5sdp"
                            android:backgroundTint="#AEE78F"
                            android:layout_marginLeft="@dimen/_15sdp"
                            android:layout_marginRight="@dimen/_15sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_2sdp"
                                android:text="@string/symtomday1to3"
                                android:textColor="#170241"
                                android:textSize="14sp">

                            </TextView>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            app:cardCornerRadius="@dimen/_5sdp"
                            android:backgroundTint="#89EBB6"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginRight="@dimen/_30sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_2sdp"
                                android:text="@string/symtomday4"
                                android:textColor="#170241"
                                android:textSize="14sp">

                            </TextView>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            app:cardCornerRadius="@dimen/_5sdp"
                            android:backgroundTint="#DDE986"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:layout_marginLeft="@dimen/_30sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_2sdp"
                                android:text="@string/symtomday5"
                                android:textColor="#031474"
                                android:textSize="14sp">

                            </TextView>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            app:cardCornerRadius="@dimen/_5sdp"
                            android:backgroundTint="#F0C9A2"
                            android:layout_marginRight="@dimen/_30sdp"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_2sdp"
                                android:text="@string/symtomday6"
                                android:textColor="#170241"
                                android:textSize="14sp">

                            </TextView>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            app:cardCornerRadius="@dimen/_5sdp"
                            android:backgroundTint="#E5A8F1"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:layout_marginLeft="@dimen/_30sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_2sdp"
                                android:text="@string/symtomday7"
                                android:textColor="#ffff"
                                android:textSize="14sp">

                            </TextView>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            app:cardCornerRadius="@dimen/_5sdp"
                            android:backgroundTint="#86ACE9"
                            android:layout_marginRight="@dimen/_30sdp"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_2sdp"
                                android:text="@string/symtomday8"
                                android:textColor="#F4F3F7"
                                android:textSize="14sp">

                            </TextView>
                        </androidx.cardview.widget.CardView>
                        <androidx.cardview.widget.CardView
                            app:cardCornerRadius="@dimen/_5sdp"
                            android:backgroundTint="#FF5252"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:layout_marginLeft="@dimen/_30sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_2sdp"
                                android:text="@string/symtomday9"
                                android:textColor="#F8F7FA"
                                android:textSize="14sp">

                            </TextView>
                        </androidx.cardview.widget.CardView>


                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>

</LinearLayout>