<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".tips.TipsActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:background="@drawable/pro7">

    </ImageView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="@dimen/_3sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_4sdp"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_2sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:background="@drawable/shape_border_round_red"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_120sdp"
                        android:background="@drawable/pro1">
                    </ImageView>
                    <TextView
                        android:layout_margin="@dimen/_2sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pro_tag1"
                        android:textSize="14sp"
                        android:textColor="#170241">

                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_3sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:background="@drawable/shape_border_round_grn8"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_120sdp"
                        android:background="@drawable/pro2">
                    </ImageView>
                    <TextView
                        android:layout_margin="@dimen/_2sdp"
                        android:text="@string/pro_tag2"
                        android:textSize="14sp"
                        android:textColor="#170241"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_3sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:background="@drawable/shape_border_round_oren"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_120sdp"
                        android:background="@drawable/pro3">
                    </ImageView>
                    <TextView
                        android:layout_margin="@dimen/_5sdp"
                        android:text="@string/pro_tag3"
                        android:textSize="14sp"
                        android:textColor="#170241"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_4sdp"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_3sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:background="@drawable/shape_border_round_oren"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_120sdp"
                        android:background="@drawable/pro5">
                    </ImageView>
                    <TextView
                        android:layout_margin="@dimen/_5sdp"
                        android:text="@string/pro_tag4"
                        android:textSize="14sp"
                        android:textColor="#170241"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>


</LinearLayout>